--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
                     (ngSubmit)="loginUsuario()"
                     id="loginform">
 
-                <a href="javascript:void(0)" class="text-center db"><img src="./assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
+                <a href="javascript:void(0)" class="text-center db"><img src="./assets/images/logo-icon.png" alt="Home" /><br/><img src="./assets/images/logo-text.png" alt="Home" /></a>
                 <div class="form-group m-t-40">
                     <div class="col-xs-12">
                         <input class="form-control" 
