--- a/src/app/pages/mantenimientos/temas/subtema.component.html
+++ b/src/app/pages/mantenimientos/temas/subtema.component.html
@@ -1,1 +1,101 @@
-<p>subtema works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Subtema</h4>
+                <h6 class="card-subtitle">Actualización de información</h6>
+                <form class="form-horizontal p-t-20" 
+                      [formGroup]="subtemaForm"
+                      (submit)="guardarSubtema()">
+    
+                    <div class="form-group row">
+                    <label for="exampleInputuname3" class="col-sm-3 control-label">Asunto*</label>
+                    <div class="col-sm-9">
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                            <input type="text" 
+                                    class="form-control" 
+                                    id="exampleInputuname4" 
+                                    placeholder="Escriba el asunto del tema"
+                                    formControlName="asunto">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="exampleInputuname3" class="col-sm-3 control-label">Texto*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-file-text"></i></div>
+                                <span class="input-group-text"></span>
+                                <textarea id="exampleInputuname4" 
+                                          placeholder="Escriba el asunto del tema"
+                                          formControlName="texto"
+                                          class="form-control"
+                                          rows="6"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="text-right">
+                            <button type="button"
+                                    class="btn btn-success waves-effect waves-light m-r-10"
+                                    [disabled]="subtemaForm.invalid"
+                                    (click)="guardarSubtema()">
+                                    <i class="fa fa-save"></i>
+                                    Guardar 
+                            </button>
+                            <button type="button" 
+                                class="btn btn-danger waves-effect waves-light m-r-10"
+                                (click)="goBack()">
+                            <i class="fa fa-backward"></i>
+                            Regreso
+                            </button>
+                        </div>
+                        <div *ngIf="subtemaSeleccionado" class="card mt-2">
+                            <div *ngIf="hayAdjunto" class="card-header">
+                              Adjunto: 
+                              <a [href]="urlAdjunto" 
+                                       target="_blank"
+                                       data-toggle="tooltip" 
+                                       data-original-title="View"
+                                       class="cursor"> 
+                                    <i class="fa fa-file-pdf-o text-inverse m-r-10"></i> 
+                              </a>
+                              <a data-toggle="tooltip" 
+                                        data-original-title="Close"
+                                        class="cursor"
+                                        (click)="eliminarAdjunto()">
+                                            <i class="fa fa-close text-danger"></i>
+                              </a> 
+                            </div>
+                            <div *ngIf="!hayAdjunto" class="card-header">
+                                Adjunto: No hay adjunto registrado
+                              </div>
+                            <div class="card-body">
+                              <h5 class="card-title">Adjuntar archivo
+                              </h5>
+                              <p class="card-text">
+                                <input class="form-control-sm" 
+                                       type="file"
+                                       id="formFile"
+                                       (change)="cambiarArchivo($any($event.target).files[0])">
+                              </p>
+                              <button type="button"
+                                            class="btn btn-success btn-block waves-effect waves-light m-r-10"
+                                            [disabled]="!archivoSubir"
+                                            (click)="subirImagen()">
+                                        <i class="fa fa-save"></i>
+                                        Subir adjunto
+                              </button>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
