--- a/src/app/pages/mantenimientos/temas/tema.component.html
+++ b/src/app/pages/mantenimientos/temas/tema.component.html
@@ -1,1 +1,172 @@
-<p>tema works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Tema</h4>
+                <h6 class="card-subtitle">Actualización de información</h6>
+                <form class="form-horizontal p-t-20" 
+                      [formGroup]="temaForm"
+                      (submit)="guardarTema()">
+    
+
+                    <div class="form-group row">
+                        <label for="exampleInputuname3" class="col-sm-3 control-label">Cliente*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                <select class="form-control" formControlName="cliente">
+                                    <option value="">Seleccione...</option>
+                                    <option *ngFor="let cliente of clientes" 
+                                            [value]="cliente._id">{{cliente.nombre_completo}}</option>
+                                </select>
+                                </div>
+                            </div>
+                    </div>
+
+                    <div class="form-group row">
+                    <label for="exampleInputuname3" class="col-sm-3 control-label">Asunto*</label>
+                    <div class="col-sm-9">
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                            <input type="text" 
+                                    class="form-control" 
+                                    id="exampleInputuname4" 
+                                    placeholder="Escriba el asunto del tema"
+                                    formControlName="asunto">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="exampleInputuname3" class="col-sm-3 control-label">Texto*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-file-text"></i></div>
+                                <span class="input-group-text"></span>
+                                <textarea id="exampleInputuname4" 
+                                          placeholder="Escriba el asunto del tema"
+                                          formControlName="texto"
+                                          class="form-control"
+                                          rows="6"></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <div class="text-right">
+                                <button type="submit" 
+                                        class="btn btn-success waves-effect waves-light m-r-10"
+                                        [disabled]="temaForm.invalid">
+                                        <i class="fa fa-save"></i>
+                                        Guardar 
+                                </button>
+                                <button type="button" 
+                                    class="btn btn-danger waves-effect waves-light m-r-10"
+                                    (click)="regresarTemas()">
+                                <i class="fa fa-backward"></i>
+                                Regreso
+                                </button>
+                            </div>    
+                        </div>
+                     </div>
+                </form>
+
+                <div *ngIf="mostrarSubtemas" class="col">
+                    <div class="card mt-2">
+                    <div *ngIf="hayAdjunto" class="card-header">
+                      Adjunto: 
+                      <a [href]="urlAdjunto" 
+                               target="_blank"
+                               data-toggle="tooltip" 
+                               data-original-title="View"
+                               class="cursor"> 
+                            <i class="fa fa-file-pdf-o text-inverse m-r-10"></i> 
+                      </a>
+                      <a data-toggle="tooltip" 
+                                data-original-title="Close"
+                                class="cursor"
+                                (click)="eliminarAdjunto(temaSeleccionado)">
+                                    <i class="fa fa-close text-danger"></i>
+                      </a> 
+                    </div>
+                    <div *ngIf="!hayAdjunto" class="card-header">
+                        Adjunto: No hay adjunto registrado
+                      </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Adjuntar archivo
+                      </h5>
+                      <p class="card-text">
+                        <input class="form-control-sm" 
+                               type="file"
+                               id="formFile"
+                               (change)="cambiarArchivo($any($event.target).files[0])">
+                      </p>
+                      <button type="button"
+                                    class="btn btn-success btn-block waves-effect waves-light m-r-10"
+                                    [disabled]="!archivoSubir"
+                                    (click)="subirImagen()">
+                                <i class="fa fa-save"></i>
+                                Subir adjunto
+                      </button>
+                    </div>
+                    </div>
+                </div>
+                <h6 class="card-subtitle mt-2">Subtemas relacionados</h6>
+
+                <div *ngIf="mostrarSubtemas" class="row">
+                    <div class="col">
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>Asunto</th>
+                                        <th>Fecha</th>
+                                        <th class="text-nowrap w100">Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let subtema of subtemas">
+                                        <td>{{subtema.asunto}}</td>
+                                        <td>{{subtema.fecha}}</td>
+                                        <td class="text-nowrap text-center">
+                                            <a [routerLink]="['/dashboard/subtemas/u', idTemaSeleccionado ,subtema._id]" data-toggle="tooltip" data-original-title="Edit"> 
+                                                <i class="fa fa-pencil text-inverse m-r-10"></i> 
+                                            </a>
+                                            <a (click)="mostrarModalSubtema(subtema._id)" 
+                                               data-toggle="tooltip" 
+                                               data-original-title="View"
+                                               class="cursor"> 
+                                                <i class="fa fa-eye text-inverse m-r-10"></i> 
+                                            </a>
+                                            <a data-toggle="tooltip" 
+                                            data-original-title="Close"
+                                            class="cursor"
+                                            (click)="eliminarSubtema(subtema)">
+                                             <i class="fa fa-close text-danger"></i> 
+                                         </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="text-right">
+                            <button class="btn btn-primary" [disabled]="activaBtnSubtemas"
+                                [routerLink]="['/dashboard/subtemas/n', idTemaSeleccionado,'']">
+                                <i class="fa fa-hospital-o"></i>
+                                Crear Subtema
+                            </button>
+                        </div>    
+                    </div>
+                </div>
+                <div *ngIf="ultimaModificacion" class="alert alert-info animated fadeIn fast mt-4">
+                    Última modificación realizada por {{ultimoUsuario}} el {{ultimaModificacion}}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
