--- a/src/app/pages/mantenimientos/clientes/cliente.component.html
+++ b/src/app/pages/mantenimientos/clientes/cliente.component.html
@@ -13,7 +13,7 @@
                         <label for="exampleInputuname3" class="col-sm-3 control-label">Foto</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <img [src]="clienteSeleccionado.img | imagen:'clientes'"
+                                <img [src]="clienteSeleccionado.img_secure_url"
                                      class="w140 cursor"
                                      (click)="abrirModal(clienteSeleccionado)">
                             </div>
