--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -57,8 +57,14 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let usuario of usuarios">
-                                <td class="text-center">
-                                    <img [src]="usuario.imagenUrl" 
+                                <td *ngIf="!usuario.img_secure_url" class="text-center">
+                                    <img src="https://res.cloudinary.com/aabsolutions/image/upload/v1711909048/asistencia_legal/no-image.jpg"  
+                                            alt="Avatar de usuario"
+                                            class="avatar cursor"
+                                            (click)="abrirModal(usuario)">
+                                </td>
+                                <td *ngIf="usuario.img_secure_url" class="text-center">
+                                    <img [src]="usuario.img_secure_url" 
                                             alt="Avatar de usuario"
                                             class="avatar cursor"
                                             (click)="abrirModal(usuario)">
