--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -53,7 +53,7 @@
                 <h6 class="card-subtitle">Imagen del usuario</h6>
 
                 <div class="text-center">
-                    <img *ngIf="!imgTemp" [src]="usuario.imagenUrl" class="img-avatar">
+                    <img *ngIf="!imgTemp" [src]="usuario.img_secure_url" class="img-avatar">
                     <img *ngIf="imgTemp" [src]="imgTemp" class="img-avatar">
                 </div>
 
