--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -54,13 +54,15 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img [src]="usuario.imagenUrl" alt="user" class="profile-pic" />
+                        <img *ngIf="!usuario.img_secure_url" src="https://res.cloudinary.com/aabsolutions/image/upload/v1711909048/asistencia_legal/no-image.jpg" alt="user" class="profile-pic" />
+                        <img *ngIf="usuario.img_secure_url" [src]="usuario.img_secure_url" alt="user" class="profile-pic" />
                     </a>
                     <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
-                                    <div class="u-img"><img [src]="usuario.imagenUrl" alt="user"></div>
+                                    <div *ngIf="!usuario.img_secure_url" class="u-img"><img src="https://res.cloudinary.com/aabsolutions/image/upload/v1711909048/asistencia_legal/no-image.jpg" alt="user"></div>
+                                    <div *ngIf="usuario.img_secure_url" class="u-img"><img [src]="usuario.img_secure_url" alt="user"></div>
                                     <div class="u-text">
                                         <h4>{{ usuario.nombre }}</h4>
                                         <p class="text-muted">
